--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "express-fileupload": "^1.4.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
